--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
     "rewrites": [
-      { "source": "/api/(.*)", "destination": "/server/main.py" }
+      { "source": "/api/(.*)", "destination": "/api/index.py" },
+      { "source": "/(.*)", "destination": "/client/index.html" }
     ]
   }
