--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
     "rewrites": [
-      { "source": "/api/(.*)", "destination": "/api/index.py" },
-      { "source": "/(.*)", "destination": "/client/index.html" }
+      { "source": "/api/(.*)", "destination": "/api/index.py" }
     ]
   }
